# endpoint_services

./: CMakeLists.txt  README.md
assets/: server.crt  server.csr  server.key  server.pem
src/: CMakeLists.txt
src/client/: CMakeLists.txt  Client.hpp  CommandLineInterface.hpp  main-client.cpp
src/include/eps_common/: CommandLineInterface.hpp  Protocol.hpp  definitions.hpp
src/include/nt_common/: Protocol.hpp  definitions.hpp
src/server/: CMakeLists.txt  Server.hpp  main-server.cpp
src/tests/: CMakeLists.txt
